2013-05-14  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/openvassd.c (main): Free GOptionContext after use.

2013-05-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Move the location of "openvassd.rules" from
	DATA (share/) directory to SYSCONF (etc/) directory.

	* doc/openvassd.rules: New. Sample and default file for
	openvassd.rules.
 
	* INSTALL: Added optinal items 1.1 and 1.2 about openvassd.conf
	and openvassd.rules.

2013-05-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/rules.c (rules_init): Don't call rules_new anymore. The result
	wasn't used anyway and creating the file when it is not there
	is wrong behaviour anyway. That file needs to be carefully
	configured by the administrator of the OpenVAS Scanner installation.
	(rules_new): Removed. It is now unused.

2013-05-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/users.c (check_user): Don't read the rules file of the user
	anymore and don't make it mandatory that at least an empty
	file "username/auth/rules" exists.
	Therefore now returns always a empty rules structure.
	(users_read_rules): Removed. This was used only by the code
	removed above.

2013-05-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/openvas-mkcert-client.in: Removed creation of rules file
	during user creation. The user created with this script is only
	used for controling via OpenVAS Manager. The rules of actual
	users are now managed by OpenVAS Manager and stored in that
	database.

2013-05-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Remove creation of GnuPG homedir here since
	openvas-libraries already takes care of this.

2013-04-11  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Note increased GnuTLS dependency.

2013-04-05  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/log.c (log_init): Print fail messages about log file to stderr, so