@@ -26,12 +26,13 @@
 */
 
 #include <stdio.h>      /* for fprintf() */
+#include <string.h>     /* for strlen() */
+#include <stdlib.h>     /* for exit() */
 #include <arpa/inet.h>  /* for inet_aton */
 #include <sys/param.h>  /* for MAXPATHLEN */
 
 #include <openvas/misc/system.h>     /* for emalloc */
 
-#include <gcrypt.h>
 #include "log.h"
 #include "users.h"
 #include "rules.h"
@@ -148,12 +149,8 @@ users_add_rule (struct openvas_rules *rules, char *rule)
 }
 
 
-#ifndef MD5_DIGEST_LENGTH
-# define MD5_DIGEST_LENGTH	16
-#endif
-
 struct openvas_rules *
-check_user (char *user, char *password, char *dname)
+check_user (char *user, char *dname)
 {
   FILE *f;
   char fname[MAXPATHLEN];
@@ -164,15 +161,6 @@ check_user (char *user, char *password, char *dname)
   if (strlen (user) >= OPENVAS_MAX_USERNAME_LEN)
     return BAD_LOGIN_ATTEMPT;
 #endif
-
-#ifdef DEBUG_PASSWD
-  fprintf (stderr, "user=%s pass=%s dname=%s\n", user,
-           password ? password : "(null)", dname ? dname : "(null)");
-#endif
-
-  /* Should we change this for certificate authentication? */
-  if (password == NULL || password[0] == '\0')
-    return BAD_LOGIN_ATTEMPT;
 
   if (strstr (user, "..") != NULL || strchr (user, '/') != NULL)
     return BAD_LOGIN_ATTEMPT;
@@ -201,64 +189,6 @@ check_user (char *user, char *password, char *dname)
                user, dname, dnameref);
           (void) fclose (f);
         }
-    }
-
-  if (check_pass)
-    {
-      char *p;
-
-      snprintf (fname, sizeof (fname), "%s/%s/auth/hash", OPENVAS_USERS_DIR,
-                user);
-      if ((f = fopen (fname, "r")) != NULL)
-        {
-          char seed[512], h1[MD5_DIGEST_LENGTH], h2[MD5_DIGEST_LENGTH];
-          char h16[MD5_DIGEST_LENGTH * 2 + 1];
-          int i, x, n;
-
-          /*
-           * file contains one or two string:
-           * the 1st one is the hex encoded MD5 hash of the seed
-           * concatenated to the password (or just the password),
-           * 2nd one (if any) is the seed, in ASCII, without space.
-           */
-          *seed = '\0';
-          if (fscanf (f, "%32s%32s", h16, seed) < 1)
-            {
-              perror (fname);
-              fclose (f);
-              return BAD_LOGIN_ATTEMPT;
-            }
-          (void) fclose (f);
-
-          memset (h1, 0, sizeof (h1));
-          memset (h2, 0, sizeof (h2));
-          for (i = 0; i < MD5_DIGEST_LENGTH; i++)
-            if (sscanf (h16 + 2 * i, "%02x", &x) < 1)
-              {
-                fprintf (stderr, "check_pass: incorrect hexadecimal string\n");
-                return BAD_LOGIN_ATTEMPT;
-              }
-            else
-              h1[i] = x;
-
-          n = sizeof (seed) - 1;
-
-          for (p = seed; *p != '\0' && *p != '\n' && *p != '\r'; p++, n--)
-            ;
-
-          if (n < strlen (password))
-            return BAD_LOGIN_ATTEMPT;
-
-          strncpy (p, password, n);
-
-          gcry_md_hash_buffer (GCRY_MD_MD5, h2, seed, strlen (seed));
-          if (memcmp (h1, h2, MD5_DIGEST_LENGTH) != 0)
-            {
-              return BAD_LOGIN_ATTEMPT;
-            }
-        }
-      else
-        return BAD_LOGIN_ATTEMPT;
     }
 
   return emalloc (sizeof (struct openvas_rules));
