@@ -1,3 +1,15 @@
+2013-05-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* src/users.c (check_user): Remove code path to check password.
+	Removed parameter "password".
+	(MD5_DIGEST_LENGTH): Remove this makro as not needed anymore.
+
+	* src/users.h: Adjust proto accordingly.
+
+	* src/auth.c (auth_check_user): Call check_user without password
+	and removed any password management. But still keep the protocol
+	part for reading the Password.
+
 2013-05-14  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	* src/openvassd.c (main): Free GOptionContext after use.
